# perple

./: .gitignore  Cargo.toml  LICENSE  README.md  pyproject.toml
data/lidar/: 000000.pcd
examples/: color_detection.rs  counter.rs  image_test.rs  loop_modes.rs  muloop_example.rs
py-scripts/: __init__.py
py-scripts/dev/: continuous_train.py  eval.py  to_onnx.py  train.py
py-scripts/hyper/: amt.yaml  hyp.yaml  my.yaml  optimizer.yaml  train.yaml
py-scripts/hypers/: optimizer.yaml
py-scripts/model/records/25_11_03_00/: results.csv
py-scripts/model/records/25_11_04_00/: args.yaml
py-scripts/model/records/25_11_04_01/: results.csv
py-scripts/model/records/25_11_04_03/: args.yaml
py-scripts/model/records/25_11_09_00/: args.yaml
py-scripts/model/records/25_11_10_00/: args.yaml
py-scripts/utils/: __init__.py  archive.py
scripts/ana/: pcd_analyzer.py
scripts/dev/: archive.py  continuous_train.py  eval.py  to_onnx.py  train.py
scripts/hyper/: dataset.yaml
scripts/model/records/25_11_03_00/: args.yaml
scripts/model/records/25_11_03_01/: args.yaml  results.csv
scripts/model/records/25_11_03_02/: args.yaml  results.csv
scripts/model/records/25_11_03_03/: args.yaml  results.csv
scripts/model/records/25_11_04_00/: results.csv
scripts/model/records/25_11_04_01/: args.yaml
src/: color.rs  config.rs  lib.rs  main.rs  perple.rs  utils.rs
src/color/: array.rs  bounds.rs  core.rs  detect.rs  image.rs  infer.rs  model.rs  posts.rs  prevs.rs  utils.rs
src/utils/: muloop.rs  sort.rs  stream.rs
tests/: benchmark.rs
(+9 files in other folders)
