[project]
name = "perple"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "matplotlib>=3.10.7",
    "open3d>=0.19.0",
    "pypcd>=0.1.1",
    "scipy>=1.15.3",
    "torch>=2.9.0",
    "tqdm>=4.67.1",
    "ultralytics>=8.3.223",
]


[[tool.uv.index]]
name = "tuna"
url = "https://pypi.tuna.tsinghua.edu.cn/simple/"
